--- a/content/EOEC.html
+++ b/content/EOEC.html
@@ -133,12 +133,37 @@
             </h6>
           </div>
           <div class="exp-box">
+            <h3>Concept</h3>
+            <h6>
+              ロゴコンセプト「江ノ島で自然と遊ぶを学ぼう」<br>子ども達に、元気に明るく自然とふれあいまなんでいってほしいというあたたかい愛溢れる活動内容に沿って、太陽をモチーフとしたキャラクターが笑顔で歩いているイラストをメインに、スタッフ・子どもたち・地域の人々から親しまれるロゴを目指す。
+            </h6>
+          </div>
+          <div class="exp-box">
             <h3>Item / Time required</h3>
             <ul class="item-list">
               <li>
                 <h6><a href="#area-1">Logo</a> / 6h</h6>
               </li>
             </ul>
+          </div>
+          <div class="exp-box">
+            <h3>Font</h3>
+            <h6 class="century-goshic">Century Goshic</h6>
+          </div>
+          <div class="exp-box">
+            <h3>Color</h3>
+            <div class="color">
+              <div class="color-box ee-bl"></div>
+              <h6>R12 G51 B136<br>C100 M90 Y10 K0</h6>
+            </div>
+            <div class="color">
+              <div class="color-box ee-red"></div>
+              <h6>R212 G84 B51<br>C21 M80 Y84 K0</h6>
+            </div>
+            <div class="color">
+              <div class="color-box ee-ye"></div>
+              <h6>R229 G255 B10<br>C21 M0 Y85 K0</h6>
+            </div>
           </div>
         </div>
       </div>
@@ -156,6 +181,9 @@
               <p>Symbol + Logotype -B</p>
             </li>
             <li class="p-goto-nav__list js-navList">
+              <p>Color pattern</p>
+            </li>
+            <li class="p-goto-nav__list js-navList">
               <p>T-shirts -MockUp</p>
             </li>
             <li class="p-goto-nav__list js-navList">
@@ -171,6 +199,8 @@
               <li class="slider-item slider-item72">
               </li>
               <li class="slider-item slider-item73">
+              </li>
+              <li class="slider-item slider-item76">
               </li>
               <li class="slider-item slider-item74">
               </li>
