--- a/content/JOYL.html
+++ b/content/JOYL.html
@@ -120,13 +120,52 @@
       <div class="ct-title">
         <h1>JOYL ひとさじの旬</h1>
       </div>
-      <div class="joyl-top">
+      <div class="sec-top">
+        <div class="top-img left-width shizuku-icon">
+          <img src="../image/JOYL/Joyl_shizuku.jpg" alt="">
+        </div>
+        <div class="top-exp right-width">
+          <div class="exp-box">
+            <h3>Project</h3>
+            <h6>
+              j-オイルミルズ国産クラフトバージンオイル「ひとさじの旬」の新聞広告を再設計。<br>元デザインの素材を使用し、新聞15段でデザインを組み直す。
+            </h6>
+          </div>
+          <div class="exp-box">
+            <h3>Concept</h3>
+            <h6>
+              通信販売だからこそ、”これじゃないとダメだ”と思えるような、手の込んだオリーブオイルの特別感を感じるデザイン。<br>ブランド力を高めるためにロゴを大きく配置することで、認知拡大を狙う。<br>身体に取り入れるものだからこそ、素材にこだわっていることがわかる、安心感のあるデザインにしたい。
+            </h6>
+          </div>
+          <div class="exp-box">
+            <h3>Item / Time required</h3>
+            <ul class="item-list">
+              <li>
+                <h6><a href="#area-1">Newspaper Ads</a> / 5h</h6>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="sec-1 top-mg" id="area-1">
+        <div class="left-width before-img">
+          <h1>Newspaper<br>Ads</h1>
+          <h3 class="joyl-before">Before</h3>
+          <img src="../image/JOYL/hitosaji_15d_Tama_0309.pdf" alt="">
+        </div>
+        <div class="right-width joyl-img">
+          <img src="../image/JOYL/Joyl_3.jpg" alt="">
+        </div>
+      </div>
+
+
+      <!-- <div class="joyl-top">
         <h1>Newspaper<br>Ads</h1>
         <h3>B1 W728*H1030</h3>
       </div>
       <div class="joyl-img">
         <img src="../image/JOYL/Joyl_3.jpg" alt="">
-      </div>
+      </div> -->
     </div>
 
     <footer id="footer">
