--- a/content/birdcoffee.html
+++ b/content/birdcoffee.html
@@ -97,16 +97,11 @@
           </div>
           <div class="exp-box">
             <h3>Target</h3>
-            <h6>代々木公園利用者、10代後半〜50代男女</h6>
+            <h6>代々木公園利用者、近隣駅利用者10代後半〜50代男女</h6>
           </div>
           <div class="exp-box">
             <h3>Concept</h3>
             <h3>それぞれの休息とちょうどいい時間を！</h3>
-          </div>
-          <div class="exp-box">
-            <h3>Font</h3>
-            <h6>日本語<span class="yu-gothic">游ゴシック</span></h6>
-            <h6>英数字・記号<span class="futura">Futura</span></h6>
           </div>
           <div class="exp-box">
             <h3>Item / Time required</h3>
@@ -115,25 +110,45 @@
                 <h6><a href="#area-1">Logo</a> / 5h</h6>
               </li>
               <li>
-                <h6><a href="#area-2">Poster B0</a>・<a href="#area-3">バス広告</a> / 10h</h6>
+                <h6><a href="#area-2">Poster B0</a>・<a href="#area-3">バス広告</a> / 15h</h6>
               </li>
               <li>
                 <h6><a href="#area-4">Copy</a> / 3h</h6>
               </li>
               <li>
-                <h6><a href="#area-5">Package</a> / 15h</h6>
+                <h6><a href="#area-5">Package</a> / 20h</h6>
               </li>
               <li>
                 <h6><a href="#area-6">Web site</a> / 30h</h6>
               </li>
             </ul>
           </div>
+          <div class="exp-box">
+            <h3>Font</h3>
+            <h6>日本語<span class="yu-gothic">游ゴシック</span></h6>
+            <h6>英数字・記号<span class="futura">Futura</span></h6>
+          </div>
+          <div class="exp-box">
+            <h3>Color</h3>
+            <div class="color">
+              <div class="color-box bc-bk"></div>
+              <h6>R46 G34 B28<br>C60 M62 Y65 K74</h6>
+            </div>
+            <div class="color">
+              <div class="color-box bc-ye"></div>
+              <h6>R252 G221 B0<br>C3 M12 Y95 K0</h6>
+            </div>
+            <div class="color">
+              <div class="color-box bc-wh"></div>
+              <h6>R235 G235 B233<br>C10 M7 Y8 K0</h6>
+            </div>
+          </div>
         </div>
       </div>
       <div class="sec-1 top-mg" id="area-1">
         <div class="left-width">
           <h1>Logo</h1>
-          <p class="exp">店名[bird coffee]から[b]と[i]のドットを組み合わせ、シルエットで鳥の横顔を表現した。視認性の高いフラットデザインかつ店のアイコンとして印象に残るロゴを目指した。</p>
+          <p class="exp">店名「bird coffee」から「b」と「i」のドットを組み合わせ、シルエットで鳥の横顔を表現した。視認性の高いフラットデザインかつ店のアイコンとして印象に残るロゴを目指した。</p>
           <ul class="p-goto-nav__lists">
             <li class="p-goto-nav__list js-navList">
               <p>Diagram 1</p>
@@ -147,6 +162,9 @@
             <li class="p-goto-nav__list js-navList">
               <p>Symbol + Logotype</p>
             </li>
+            <li class="p-goto-nav__list js-navList">
+              <p>Color pattern</p>
+            </li>
           </ul>
         </div>
         <div class="right-width">
@@ -158,6 +176,8 @@
             <li class="slider-item slider-item03 bc_03">
             </li>
             <li class="slider-item slider-item04 bc_04">
+            </li>
+            <li class="slider-item slider-item17 bc_04">
             </li>
           </ul>
         </div>
