--- a/content/fukushima.html
+++ b/content/fukushima.html
@@ -133,7 +133,7 @@
           </div>
           <div class="exp-box">
             <h3>Target</h3>
-            <h6>東京都に住む、日常でJRを利用する20代〜50代男女。<br>福島県にあまり訪れたことがない人や、福島県の観光地についての知識が少ないため、旅行のハードルが高いと感じている人。</h6>
+            <h6>東京都に住む、日常でJRを利用する20代〜50代男女。<br>福島県にあまり訪れたことがない人や、福島県の観光地について知識が少ないため、旅行のハードルが高いと感じている人。</h6>
           </div>
           <div class="exp-box">
             <h3>Concept</h3>
@@ -143,10 +143,6 @@
             </h6>
           </div>
           <div class="exp-box">
-            <h3>Font</h3>
-            <h6>日本語<span class="yu-gothic">游ゴシック</span>・<span class="tsukushi">筑紫B丸ゴシック</span></h6>
-          </div>
-          <div class="exp-box">
             <h3>Item / Time required</h3>
             <ul class="item-list">
               <li>
@@ -154,25 +150,38 @@
               </li>
             </ul>
           </div>
+          <div class="exp-box">
+            <h3>Font</h3>
+            <h6>日本語<span class="yu-gothic">游ゴシック</span>・<span class="tsukushi">筑紫B丸ゴシック</span></h6>
+          </div>
         </div>
       </div>
       <div class="sec-1 top-mg" id="area-1">
         <div class="left-width">
           <h1>Poster</h1>
           <h3>B1 W728*H1030</h3>
-          <!-- <ul class="p-goto-nav__lists">
-          <div class="copy-box">
-            <h3>Lead copy</h3>
-            <h3 class="lead-copy">ふくのしま。福島。
-            </h3>
-          </div>
-          <div class="copy-box">
-            <h3>Body copy</h3>
-            <h6>
-              福島って広いから。<br>気になる1つの”しま”を選んだら、あなたにぴったりの満喫をJR東日本が提案します。
-            </h6>
-          </div>
-        </ul> -->
+          <ul class="p-goto-nav__lists">
+            <li class="p-goto-nav__list js-navList">
+              <p>B1 Poster</p>
+            </li>
+            <li class="p-goto-nav__list js-navList">
+              <p>MockUp</p>
+            </li>
+          </ul>
+        </div>
+        <div class="right-width">
+          <ul class="slider js-slickGoTo">
+            <li class="slider-item slider-item51">
+            </li>
+            <li class="slider-item slider-item52">
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- <div class="sec-1 top-mg" id="area-1">
+        <div class="left-width">
+          <h1>Poster</h1>
+          <h3>B1 W728*H1030</h3>
         </div>
         <div class="right-width">
           <div class="img-position">
@@ -181,7 +190,7 @@
 
         </div>
       </div>
-      <img src="../image/Fukushima/Free Three Subway Station Poster Mockup.jpg" alt="" class="fukushima-img-mock">
+      <img src="../image/Fukushima/Free Three Subway Station Poster Mockup.jpg" alt="" class="fukushima-img-mock"> -->
 
       <div class="top-mg fk-copy">
         <div class="right-width">
@@ -199,32 +208,28 @@
         </div>
       </div>
 
-
-      <div class="sec-2 top-mg fk-copy" id="area-2">
+      <div class="sec-2 top-mg" id="area-2">
         <div class="left-width">
           <h1>Poster</h1>
           <h3>B3 wide W1030*H364</h3>
-          <!-- <ul class="p-goto-nav__lists">
-          <li class="p-goto-nav__list js-navList">
-            <p>B3 wide Poster</p>
-          </li>
-          <li class="p-goto-nav__list js-navList">
-            <p>MockUp</p>
-          </li>
-        </ul> -->
+          <ul class="p-goto-nav__lists">
+            <li class="p-goto-nav__list js-navList">
+              <p>B3 wide Poster</p>
+            </li>
+            <li class="p-goto-nav__list js-navList">
+              <p>MockUp</p>
+            </li>
+          </ul>
         </div>
-
-        <!-- <div class="right-width">
-        <div class="slider">
+        <div class="right-width">
           <ul class="slider js-slickGoTo">
             <li class="slider-item slider-item53">
             </li>
             <li class="slider-item slider-item54">
             </li>
           </ul>
-        </div> -->
-      </div><img src="../image/Fukushima/fukushima_A3wide.jpg" alt="" class="fukushima-img-mock">
-    </div>
+        </div>
+      </div>
 
 
     <footer id="footer">
