--- a/content/konpake.html
+++ b/content/konpake.html
@@ -101,12 +101,7 @@
           </div>
           <div class="exp-box">
             <h3>Target</h3>
-            <h6>今昔関係なくいいものを記録している活動内容に伴い、ターゲットも幅広く10〜50代とし、まだ知らない人々の興味をより誘うことが目的。</h6>
-          </div>
-          <div class="exp-box">
-            <h3>Font</h3>
-            <h6>日本語<span class="zenkaku-gothic">Zen Kaku Gothic New</span></h6>
-            <h6>英数字・記号<span class="futura">Futura</span></h6>
+            <h6>今昔関係なくいいものを記録している活動内容に伴い、ターゲットも幅広く10〜50代とし、まだ活動を知らない人々の興味をより誘うことが目的。</h6>
           </div>
           <div class="exp-box">
             <h3>Item / Time required</h3>
@@ -115,10 +110,10 @@
                 <h6><a href="#area-1">Logo</a> / 4h</h6>
               </li>
               <li>
-                <h6><a href="#area-2">Flyer</a> / 10h</h6>
+                <h6><a href="#area-2">Flyer</a> / 15h</h6>
               </li>
               <li>
-                <h6><a href="#area-3">Copy</a> / 3h</h6>
+                <h6><a href="#area-3">Copy</a> / 4h</h6>
               </li>
               <li>
                 <h6><a href="#area-4">Web site</a> / 25h</h6>
@@ -126,20 +121,24 @@
             </ul>
           </div>
           <div class="exp-box">
-            <h3>Main color</h3>
+            <h3>Font</h3>
+            <h6>日本語<span class="zenkaku-gothic">Zen Kaku Gothic New</span></h6>
+            <h6>英数字・記号<span class="futura">Futura</span></h6>
+          </div>
+          <div class="exp-box">
+            <h3>Color</h3>
             <div class="color">
-              <div class="kp-red">
-                <p>#d7271c</p>
-              </div>
-              <div class="kp-yellow">
-                <p>#fff232</p>
-              </div>
-              <div class="kp-blue">
-                <p>#17489d</p>
-              </div>
+              <div class="color-box kp-red"></div>
+              <h6>R230 G31 B25<br>C18 M95 Y98 K0</h6>
             </div>
-
-
+            <div class="color">
+              <div class="color-box kp-yellow"></div>
+              <h6>R255 G241 B51<br>C16 M10 Y78 K0</h6>
+            </div>
+            <div class="color">
+              <div class="color-box kp-blue"></div>
+              <h6>R23 G72 B156<br>C96 M81 Y16 K0</h6>
+            </div>
           </div>
         </div>
       </div>
