--- a/content/tennnoharuka.html
+++ b/content/tennnoharuka.html
@@ -131,15 +131,20 @@
           <div class="exp-box">
             <h3>Project</h3>
             <h6>
-              甘藷干芋専門農園　横田商店。茨城県にて創業50年の甘藷農園。<br>オリジナルブランドさつまいも「天ノはるかR」の青果流通を開始するにあたりパッケージデザインを作成。<br><br>名称由来：特上品質であることのイメージとして「天」の文字を冠し、品種名である「紅はるか」とかけて「天の遥かまで知れ渡るようなさつまいもであること」と「食べてくださるお客様の心が晴れ渡るさつまいもであること」の思いを込めて由来としている。<br><br>Size
-              (W60*H130)
+              甘藷干芋専門農園　横田商店。茨城県にて創業50年の甘藷農園。<br>オリジナルブランドさつまいも「天ノはるかR」の青果流通を開始するにあたりパッケージデザインを作成。<br><br>名称由来：特上品質であることのイメージとして「天」の文字を冠し、品種名である「紅はるか」とかけて「天の遥かまで知れ渡るようなさつまいもであること」と「食べてくださるお客様の心が晴れ渡るさつまいもであること」の思いを込めて由来としている。
+            </h6>
+          </div>
+          <div class="exp-box">
+            <h3>Concept</h3>
+            <h6>
+              名称由来から”天と地を繋ぐ芋づる”＋”芋づる式にいいことがおこりますように”の願いを込めてツルを模した線で繋いだ。<br>パッケージには太陽と地・さつまいもを天地に配置し、自然のパワーで育まれたおいしさを味わいたい、手に取りたいと思ってもらえるデザインを意識した。
             </h6>
           </div>
           <div class="exp-box">
             <h3>Item / Time required</h3>
             <ul class="item-list">
               <li>
-                <h6><a href="#area-1">Typography</a> / 3h</h6>
+                <h6><a href="#area-1">Typography</a> / 4h</h6>
               </li>
               <li>
                 <h6><a href="#area-2">Package</a> / 4h</h6>
