--- a/content/profile.html
+++ b/content/profile.html
@@ -57,7 +57,7 @@
       <div class="con_header-bg">
         <div class="small-header">
           <button id="topbtn">
-            <!-- <h3 class="small-name none">SUZUKI AOI</h3> -->
+            <h3 class="small-name none">SUZUKI AOI</h3>
             <h3 class="text-repeat">
               <span class="txt-rotate" data-period="2000" data-rotate='[ "PORTFOLIO", "SUZUKI AOI" ]'></span>
             </h3>
@@ -115,8 +115,10 @@
 
     <div class="content-width">
       <div class="ct-title">
-        <h1>SUZUKI AOI</h1>
-        <p>May 1, 1996. Taurus. Type O.<br>Born in Miyagi.<br>+818060592067<br>aoi.s9651@gmail.com</p>
+        <div class="left-title">
+          <h1>SUZUKI AOI</h1>
+          <p>May 1, 1996. Taurus. Type O.<br>Born in Miyagi.<br>+818060592067<br>aoi.s9651@gmail.com</p>
+        </div>
         <div class="right-title">
           <h1>鈴木　葵</h1>
           <p>1996.5.1 おうし座 O型<br>宮城県生まれ<br>080-6059-2067<br>aoi.s9651@gmail.com</p>
@@ -125,59 +127,228 @@
 
       <div id="luxy">
         <section class="area">
-          <figure class="luxy-el" data-speed-y="30">
-            <img src="../image/profile/IMG_3723.jpg" alt="">
+          <figure class="luxy-el" data-speed-y="6">
+            <div class="profile-img">
+              <img src="../image/profile/IMG_3723.jpg" alt="" class="profile-img">
+            </div>
           </figure>
-          <ul class="timeline luxy-el" data-speed-y="1">
-            <li>
-              <dl>
-                <dt><img src="../image/profile/icon_born.png" alt=""></dt>
-              </dl>
-              <span class="border-line"></span>
-            </li>
-            <li>
-              <dl>
-                <dt><h6>ものづくりが好き。<br>地元にある文化会館の建築に魅了された。</h6></dt>
-              </dl>
-              <span class="border-line"></span>
-            </li>
-            <li>
-              <dl>
-                <dt><img src="../image/profile/icon_arch.png" alt=""></dt>
-              </dl>
-              <span class="border-line"></span>
-            </li>
-            <li>
-              <dl>
-                <dt><h6>より自由な空間表現で感動を与える力をもつ、Production design, Art designに出会う。</h6></dt>
-              </dl>
-              <span class="border-line"></span>
-            </li>
-            <li>
-              <dl>
-                <dt><img src="../image/profile/icon_art.png" alt=""></dt>
-              </dl>
-              <span class="border-line"></span>
-            </li>
-            <li>
-              <dl>
-                <dt><h6>暮らしの中で、ものや体験から受け取ることができる喜びを広げ、共有し、誰かの心を少しでも豊かにできるような活動をしたい。</h6></dt>
-              </dl>
-              <span class="border-line"></span>
-            </li>
-            <li>
-              <dl>
-                <dt><img src="../image/profile/icon_des.png" alt=""></dt>
-              </dl>
-            </li>
-          </ul>
+          <div class="luxy-el" data-speed-y="-50">
+            <ul class="timeline">
+              <li>
+                <dl>
+                  <dt><img src="../image/profile/icon_born_2.png" alt=""></dt>
+                </dl>
+                <span class="border-line"></span>
+              </li>
+              <li class="point">
+                <dl>
+                  <dt>
+                    <p>ものづくりが好き。<br>地元にある文化会館のガラスの大きな建築に魅了された。</p>
+                  </dt>
+                </dl>
+                <span class="border-line"></span>
+              </li>
+              <li>
+                <dl>
+                  <dt><img src="../image/profile/icon_arch_2.png" alt=""></dt>
+                </dl>
+                <span class="border-line"></span>
+              </li>
+              <li class="point">
+                <dl>
+                  <dt>
+                    <p>より自由な空間表現で感動を与える力をもつ、Production design, Art designに出会う。</p>
+                  </dt>
+                </dl>
+                <span class="border-line"></span>
+              </li>
+              <li>
+                <dl>
+                  <dt><img src="../image/profile/icon_art_2.png" alt=""></dt>
+                </dl>
+                <span class="border-line"></span>
+              </li>
+              <li class="point">
+                <dl>
+                  <dt>
+                    <p>暮らしの中で、ものや体験から受け取ることができる喜びを広げ、共有し、誰かの心が少しでも豊かになるような活動をしたい。</p>
+                  </dt>
+                </dl>
+                <span class="border-line"></span>
+              </li>
+              <li class="point">
+                <dl>
+                  <dt><img src="../image/profile/icon_des_2.png" alt=""></dt>
+                </dl>
+                <span class="border-line"></span>
+              </li>
+              <li>
+                <dl></dl>
+              </li>
+            </ul>
+          </div>
         </section>
+        <!-- <div class="back-moji luxy-el" data-speed-y="10">
+          <img src="../image/profile/2_moji.png" alt="">
+        </div> -->
+      </div>
+      <div class="right-width-p">
+        <div class="exp-box">
+          <h3>Career</h3>
+          <h6>
+            東北学院大学工学部にて建築を学ぶ。卒業後、株式会社イリアに入社。施工管理業務全般を担うコンストラクション部に所属。オフィス、商業施設の新築・リニューアル計画、計7現場を担当。主にプロジェクトのスケジュール・ディテール・品質の管理を行う。<br>2023年4月から広告・映像の美術デザイナーの下でアシスタント業務に携わる。企画打ち合わせから参画、プロップの選定、作り物のパッケージ制作など業務全般を遂行。2023年11月から株式会社クリエイターズアカデミーにてグラフィックデザイン・Webデザインについて学ぶ。
+          </h6>
+          <h6 class="career">2019.4~2023.3<br>株式会社イリア<br>
+            2023.4~2023.9<br>美術デザイナーアシスタント<br>
+            2023.11~2024.5<br>株式会社クリエイターズアカデミー
+          </h6>
+        </div>
+        <div class="exp-box">
+          <h3>Skill</h3>
+          <ul class="skill">
+            <h6>
+              <li>
+                Adobe Illustrator
+                <div class="star">
+                  <img src="../image/profile/star_1.png" alt="" class="rotateY">
+                  <img src="../image/profile/star_2.png" alt="" class="rotateY delay-time1">
+                  <img src="../image/profile/star_3.png" alt="" class="rotateY ">
+                  <img src="../image/profile/star_4.png" alt="" class="rotateY delay-time1">
+                  <img src="../image/profile/star_5.png" alt="" class="rotateY ">
+                </div>
+              </li>
+              <li>
+                Adobe Photoshop
+                <div class="star">
+                  <img src="../image/profile/star_1.png" alt="" class="rotateY">
+                  <img src="../image/profile/star_2.png" alt="" class="rotateY delay-time1">
+                  <img src="../image/profile/star_3.png" alt="" class="rotateY delay-time1">
+                  <img src="../image/profile/star_4.png" alt="" class="rotateY ">
+                  <img src="../image/profile/star_5-2.png" alt="" class="rotateY delay-time1">
+                </div>
+              </li>
+              <li>
+                Adobe Indesign
+                <div class="star">
+                  <img src="../image/profile/star_1.png" alt="" class="rotateY">
+                  <img src="../image/profile/star_2.png" alt="" class="rotateY delay-time1">
+                  <img src="../image/profile/star_3.png" alt="" class="rotateY">
+                  <img src="../image/profile/star_4.png" alt="" class="rotateY delay-time1">
+                </div>
+              </li>
+              <li>
+                Visual Studio Code
+                <div class="star">
+                  <img src="../image/profile/star_1.png" alt="" class="rotateY delay-time1">
+                  <img src="../image/profile/star_2.png" alt="" class="rotateY ">
+                  <img src="../image/profile/star_3.png" alt="" class="rotateY delay-time1">
+                  <img src="../image/profile/star_4.png" alt="" class="rotateY ">
+                  <img src="../image/profile/star_5.png" alt="" class="rotateY delay-time1">
+                </div>
+              </li>
+              <li>
+                Figma
+                <div class="star">
+                  <img src="../image/profile/star_1.png" alt="" class="rotateY ">
+                  <img src="../image/profile/star_2.png" alt="" class="rotateY delay-time1">
+                  <img src="../image/profile/star_3.png" alt="" class="rotateY ">
+                </div>
+              </li>
+              <li>
+                Git Hub
+                <div class="star">
+                  <img src="../image/profile/star_1.png" alt="" class="rotateY delay-time1">
+                  <img src="../image/profile/star_2.png" alt="" class="rotateY ">
+                  <img src="../image/profile/star_3.png" alt="" class="rotateY delay-time1">
+                  <img src="../image/profile/star_4.png" alt="" class="rotateY ">
+                </div>
+              </li>
+              <li>
+                HTML/CSS/Javascript
+                <div class="star">
+                  <img src="../image/profile/star_1.png" alt="" class="rotateY ">
+                  <img src="../image/profile/star_2.png" alt="" class="rotateY delay-time1">
+                  <img src="../image/profile/star_3.png" alt="" class="rotateY ">
+                  <img src="../image/profile/star_4.png" alt="" class="rotateY delay-time1">
+                  <img src="../image/profile/star_5-2.png" alt="" class="rotateY ">
+                </div>
+              </li>
+              <li>
+                Vector Works
+                <div class="star">
+                  <img src="../image/profile/star_1.png" alt="" class="rotateY  delay-time1">
+                  <img src="../image/profile/star_2.png" alt="" class="rotateY ">
+                  <img src="../image/profile/star_3.png" alt="" class="rotateY  delay-time1">
+                  <img src="../image/profile/star_4-2.png" alt="" class="rotateY ">
+                </div>
+              </li>
+              <li>
+                Bricks CAD
+                <div class="star">
+                  <img src="../image/profile/star_1.png" alt="" class="rotateY ">
+                  <img src="../image/profile/star_2.png" alt="" class="rotateY  delay-time1">
+                  <img src="../image/profile/star_3.png" alt="" class="rotateY ">
+                </div>
+              </li>
+            </h6>
+          </ul>
+        </div>
       </div>
 
+      <div class="back-moji luxy-el" data-speed-y="-60">
+        <img src="../image/profile/2_moji.png" alt="">
+      </div>
+      <div class="important-box">
+        <h1>Important<br>values in life.</h1>
+      </div>
+        <div class="value-box">
+          <div class="item_1">
+            <img src="../image/profile/value_1.jpg" alt="">
+          </div>
+          <div class="item_1">
+            <img src="../image/profile/value_2.jpg" alt="">
+          </div>
+          <div class="item_1">
+            <img src="../image/profile/value_moji_1.png" alt="">
+          </div>
+          <div class="item_1">
+            <img src="../image/profile/value_3.jpg" alt="">
+          </div>
+          <div class="item_1">
+            <img src="../image/profile/value_4.jpg" alt="">
+          </div>
+          <div class="item_1">
+            <img src="../image/profile/value_moji_2.png" alt="">
+          </div>
+          <div class="item_1">
+            <img src="../image/profile/value_5.jpg" alt="">
+          </div>
+          <div class="item_1">
+            <img src="../image/profile/value_p.png" alt="">
+          </div>
+          <div class="item_1">
+            <img src="../image/profile/value_6.jpg" alt="">
+          </div>
+          <div class="item_1">
+            <img src="../image/profile/value_7.jpg" alt="">
+          </div>
+          <div class="item_1">
+            <img src="../image/profile/value_8.jpg" alt="">
+          </div>
+          <div class="item_1">
+            <img src="../image/profile/value_moji_3.png" alt="">
+          </div>
+        </div>
+        <div class="identity-box">
+          <h1>Identity</h1>
+          <img src="../image/profile/identity.png" alt="">
+        </div>
     </div>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+    integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="../bird_coffee/js/jquery-3.7.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollify/1.0.21/jquery.scrollify.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
@@ -186,4 +357,5 @@
   <script src="../js/timeline.js"></script>
 
 </body>
+
 </html>
