--- a/content/birdcoffee.html
+++ b/content/birdcoffee.html
@@ -341,7 +341,7 @@
         <div class="left-width">
           <h1>Web site</h1>
           <a href="../bird_coffee/top.html" target="_blank">
-            <h5>bird-coffee.com<img width="25" height="25" src="https://img.icons8.com/ios-glyphs/25/external-link.png"
+            <h5 class="site-icon">bird-coffee.com<img width="25" height="25" src="https://img.icons8.com/ios-glyphs/25/external-link.png"
                 alt="external-link" /></h5>
           </a>
           <ul class="p-goto-nav__lists">
