--- a/content/profile.html
+++ b/content/profile.html
@@ -52,6 +52,7 @@
 </head>
 
 <body class="move ttb">
+  <div class="animation-pro"></div>
   <div id="container">
     <header>
       <div class="con_header-bg">
