--- a/content/konpake.html
+++ b/content/konpake.html
@@ -234,7 +234,7 @@
         <div class="left-width">
           <h1>Web site</h1>
           <a href="../bird_coffee/top.html" target="_blank">
-            <h5>konnanikawaiipakkeiji.com<img width="25" height="25"
+            <h5 class="site-icon">konnanikawaiipakkeiji.com<img width="25" height="25"
                 src="https://img.icons8.com/ios-glyphs/25/external-link.png" alt="external-link" /></h5>
           </a>
           <ul class="p-goto-nav__lists">
