--- a/index_2.html
+++ b/index_2.html
@@ -8,11 +8,15 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css">
   <link href="https://fonts.cdnfonts.com/css/century-gothic-paneuropean" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/helvetica-neue-55" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/header.css">
+
+  <link rel="stylesheet" href="css/style.css" media="screen and (min-width:900px)">
+  <link rel="stylesheet" href="css/mobile/style_mb.css" media="screen and (max-width:900px)">
+  <link rel="stylesheet" href="css/header.css" media="screen and (min-width:900px)">
+  <link rel="stylesheet" href="css/mobile/header_mb.css" media="screen and (max-width:900px)">
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/sub.css">
-  <link rel="stylesheet" href="css/grid.css">
+  <link rel="stylesheet" href="css/grid.css" media="screen and (min-width:900px)">
+  <link rel="stylesheet" href="css/mobile/grid_mb.css" media="screen and (max-width:900px)">
   <!-- <link rel="stylesheet" href="css/load.scss"> -->
 </head>
 
@@ -85,7 +89,7 @@
 
   <div class="content-box">
     <div class="container">
-      <div class="top-item fadeUp bgUD">
+      <div class="top-item fadeUp bgUD box-31">
         <a href="content/birdcoffee.html" class="btn01">
           <span class="mask-bc">
             <img src="image/bird_coffee/logo_01.png" alt="">
@@ -96,7 +100,7 @@
           </span>
         </a>
       </div>
-      <div class="top-item fadeUp delay-time1 bgUD">
+      <div class="top-item fadeUp delay-time1 bgUD box-32">
         <a href="content/EOEC.html" class="btn05">
           <span class="mask-eo">
             <img src="image/EOEC/EOEC_logo1.png" alt="">
@@ -156,6 +160,10 @@
           <div class="emblem1">topback・topback・</div>
         </button>
       </div>
+      <div class="top-item fadeUpTrigger box-38">
+        <h1>Six items in total</h1>
+        <!-- <img src="image/bird_coffee/bc_poster_tate1.jpg" alt=""> -->
+      </div>
       <div class="top-item box-5 fadeUpTrigger bgUD">
         <a href="content/birdcoffee.html">
           <span class="mask-bc">
@@ -167,10 +175,7 @@
           </span>
         </a>
       </div>
-      <div class="top-item fadeUpTrigger">
-        <h1>Six items in total</h1>
-        <!-- <img src="image/bird_coffee/bc_poster_tate1.jpg" alt=""> -->
-      </div>
+      
       <div class="top-item box-6 fadeUpTrigger bgUD">
         <a href="content/konpake.html">
           <span class="mask-kp">
@@ -215,7 +220,7 @@
           </span>
         </a>
       </div>
-      <div class="top-item fadeUpTrigger delay-time3">
+      <div class="top-item fadeUpTrigger delay-time3 box-34">
         <button id="topbtn3" class="btn">
           <div class="emblem2">topback・topback・</div>
         </button>
@@ -231,7 +236,7 @@
           </span>
         </a>
       </div>
-      <div class="top-item fadeUpTrigger delay-time2 bgUD">
+      <div class="top-item fadeUpTrigger delay-time2 bgUD box-35">
         <a href="content/birdcoffee.html">
           <span class="mask-bc">
             <img src="image/bird_coffee/Pouch Mockup_1.jpg" alt="">
@@ -242,7 +247,7 @@
           </span>
         </a>
       </div>
-      <div class="top-item fadeUpTrigger bgUD">
+      <div class="top-item fadeUpTrigger bgUD box-36">
         <a href="content/birdcoffee.html">
           <span class="mask-bc">
             <img src="image/bird_coffee/Pouch Mockup_2.jpg" alt="">
@@ -264,7 +269,7 @@
           </span>
         </a>
       </div>
-      <div class="top-item fadeUpTrigger delay-time3 bgUD">
+      <div class="top-item fadeUpTrigger delay-time3 bgUD ">
         <a href="content/birdcoffee.html">
           <span class="mask-bc">
             <img src="image/bird_coffee/Pouch Mockup_4.jpg" alt="">
@@ -286,7 +291,7 @@
           </span>
         </a>
       </div>
-      <div class="top-item fadeUpTrigger delay-time4 bgUD">
+      <div class="top-item fadeUpTrigger delay-time4 bgUD box-37">
         <a href="content/fukushima.html">
           <span class="mask-fu">
             <img src="image/Fukushima/fukushima_icon.jpg" alt="">
@@ -319,8 +324,8 @@
           </span>
         </a>
       </div>
-      <div class="top-item fadeUpTrigger delay-time3">
-        <button id="topbtn4">
+      <div class="top-item fadeUpTrigger delay-time3 box-33">
+        <button id="topbtn4" class="btn">
           <div class="emblem3">topback・topback・</div>
         </button>
       </div>
@@ -382,8 +387,8 @@
           </span>
         </a>
       </div>
-      <div class="top-item fadeUpTrigger delay-time3">
-        <button id="topbtn5">
+      <div class="top-item fadeUpTrigger delay-time3 box-39">
+        <button id="topbtn5" class="btn">
           <div class="emblem4">topback・topback・</div>
         </button>
       </div>
@@ -420,7 +425,7 @@
           </span>
         </a>
       </div>
-      <div class="top-item fadeUpTrigger delay-time1 bgUD">
+      <div class="top-item fadeUpTrigger delay-time1 bgUD box-40">
         <a href="content/konpake.html">
           <span class="mask-kp">
             <img src="image/konpake/konpake_flyer_yel1.jpg" alt="">
@@ -431,7 +436,7 @@
           </span>
         </a>
       </div>
-      <div class="top-item fadeUpTrigger delay-time3 bgUD">
+      <div class="top-item fadeUpTrigger delay-time3 bgUD box-41">
         <a href="content/konpake.html">
           <span class="mask-kp">
             <img src="image/konpake/konpake_flyer_yel2.jpg" alt="">
@@ -442,7 +447,7 @@
           </span>
         </a>
       </div>
-      <div class="top-item fadeUpTrigger bgUD">
+      <div class="top-item fadeUpTrigger bgUD box-40">
         <a href="content/konpake.html">
           <span class="mask-kp">
             <img src="image/konpake/konpake_flyer_blu1.jpg" alt="">
@@ -453,7 +458,7 @@
           </span>
         </a>
       </div>
-      <div class="top-item fadeUpTrigger delay-time2 bgUD">
+      <div class="top-item fadeUpTrigger delay-time2 bgUD box-41">
         <a href="content/konpake.html">
           <span class="mask-kp">
             <img src="image/konpake/konpake_flyer_blu2.jpg" alt="">
@@ -479,7 +484,18 @@
   </div>
 
   <footer id="footer">
-
+    <div class="footer">
+      <button id="topbtn6" class="btn">
+        <div class="emblem5">topback・topback・</div>
+      </button>
+      <div class="contact">
+        <p>
+          SUZUKI AOI<br>
+          080 6059 2067<br>
+          aoi.s9651@gmail.com
+        </p>
+      </div>
+    </div>
   </footer>
   
 
